# chat-grpc

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: general.yml  security_audit.yml
.sqlx/: query-0fde8f3fcc4f9ca4bf562517780814032091b9f2c8be01f546525f76bb68838b.json  query-16f31caeb2c6a4414af7e38595e3f4cde82d3ed4ba5ae5b0f04a2c853f88d583.json  query-796997353f1e9e83feb9318d9f4efa0666cf074e074023a694c770d1df3b5849.json  query-c6fe0983e3f740b50c4265e1e616738607ace1fdd88bccfca2b506c756e38602.json  query-c8e32d0c7cd55f21381d9e3775d351d088879df8f7605145223575cf95f6907a.json  query-eac1dfd4116503896f291caecccddef23eeff310171c430cfd59555e1373c6a7.json  query-fa4cecf600b8ee9918d5dcfe8c9295feb386bb1a0a399e35a2e86a3ad8fb1a95.json
auth/: .env  Cargo.toml  build.rs
auth/.sqlx/: query-cb60e62c501ef7264c9a6d18c7124c20d8293b4106e66897d161b842ed5c5d3b.json  query-ccea7e5f79e449c4d1bc694d05b435aa759ec3098dc429d0f939f29cb4ede0d5.json
auth/configuration/: config.yaml
auth/migrations/: 20231226112335_create_accounts_table.sql  20231226154310_first_lastname_column.sql  20240112104417_create_auth_token_table.sql  20240317130624_rename_password_column.sql
auth/proto/: auth.proto
auth/scripts/: init_db.sh
auth/src/: authentication.rs  configuration.rs  lib.rs  logging.rs  secrets.rs  server.rs
auth/src/client/: client_methods.rs  mod.rs
auth/src/proto/: auth.rs
auth/src/server/: auth_service.rs  mod.rs  startup.rs
auth/src/server/auth_service/: auth_token.rs  check_existing_user.rs  login.rs  mod.rs  password.rs  register.rs
auth/src/server/auth_service/auth_token/: generation.rs  mod.rs  postgres_operations.rs  redis_operations.rs  validation.rs
auth/src/server/validation/: mod.rs  register_signup_data.rs
auth/src/server/validation/types/: email.rs  firstname.rs  lastname.rs  mod.rs  password.rs  username.rs
auth/tests/api/: auth.rs  helpers.rs  main.rs
auth/tests/api/auth/: login.rs  mod.rs  register.rs
chat/: Cargo.toml  build.rs
chat/configuration/: config.yaml
chat/proto/: chat.proto
chat/src/: chat.rs  configuration.rs  lib.rs
chat/src/proto/: chat.rs
chat/src/server/: auth_interceptor.rs  mod.rs  startup.rs
chat/src/server/chat_service/: mod.rs
client/: Cargo.toml
client/src/: app.rs  lib.rs  tui.rs  ui.rs
client/src/api/: auth.rs  chat.rs  mod.rs
client/src/components/: footer.rs  home.rs  mod.rs
client/src/components/home/: login.rs  mod.rs  validation.rs
client/src/components/home/chat/: mod.rs
client/src/components/home/login/: mod.rs  validation.rs
client/src/components/home/register/: mod.rs
client/src/events/: event.rs  event_handler.rs  mod.rs
client/src/ui/: mod.rs
