[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10"
prost = "0.12"
# full : use everything in tokio
tokio = { version = "1.0", features = ["full"] }
# runtime-tokio : define that we tokio as our runtime
# tls-rustls : define that we use rusttls as tls implementation
# postgres : so we can work with postgres function
# macros : so we can use defined macros from sqlx dependency
# migrate : so we can perform migrations inside the app
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres", "macros", "migrate"]}
serde = "1.0.193"
# yaml : features so we can work with yaml files
config = {version = "0.13.4", default-features = false, features = ["yaml"]}
tonic-reflection = "0.10.2"
tracing = "0.1.40"
# registry : features is used so we can modify the subscriber that we wiill create
# env-filter : features is used to set the filter for the logs that will be emitted
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
secrecy = { version = "0.8.0", features = ["serde"] }
tonic-health = "0.10.2"
# we use the v4 feature flag so we can generate random uuid
uuid = {version = "1.6.1", features = ["v4"]}
validator = "0.16.1"
unicode-segmentation = "1.10.1"

[dev-dependencies]
once_cell = "1.19.0"


[build-dependencies]
tonic-build = "0.10"


[[bin]]
name = "auth-server"
path = "src/bin/server.rs"

[[bin]]
name = "auth-client"
path = "src/bin/client.rs"

[lib]
path = "src/lib.rs"
