[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
tokio = { version = "1.0", features = ["full"] }
ratatui = "0.27.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures-timer = "3.0.3"
futures = "0.3.30"
tui-big-text = "0.5.2"

[[bin]]
name = "chat-client"
path = "src/bin/client.rs"

[lib]
path = "src/lib.rs"
