[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
tokio = { version = "1.0", features = ["full"] }
ratatui = "0.27.0"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures-timer = "3.0.3"
futures = "0.3.30"
tui-big-text = "0.5.2"
tui-prompts = "0.3.19"
unicode-segmentation = "1.10.1"
tui-popup = "0.4.4"
validator = "0.16.1"
tonic = "0.10"
auth = { path = "../auth" }
# internal_auth = {path = "../auth"}

[[bin]]
name = "chat-client"
path = "src/bin/client.rs"

[lib]
path = "src/lib.rs"
